--- a/package.json
+++ b/package.json
@@ -20,13 +20,9 @@
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-<<<<<<< HEAD
     "tailwindcss": "^4.1.18",
-    "zod": "^4.3.6"
-=======
-    "tailwind-merge": "^3.5.0",
-    "tailwindcss": "^4.1.18"
->>>>>>> develop
+    "zod": "^4.3.6",
+    "tailwind-merge": "^3.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
