--- a/package.json
+++ b/package.json
@@ -17,12 +17,18 @@
     "@tailwindcss/vite": "^4.1.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "express": "^5.2.1",
+    "json-server": "^0.17.4",
+    "jsonwebtoken": "^9.0.3",
+    "multer": "^2.0.2",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "tailwind-merge": "^3.5.0",
     "tailwindcss": "^4.1.18",
-    "zod": "^4.3.6",
-    "tailwind-merge": "^3.5.0"
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
