--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "server": "node server.js",
-    "dev:all": "concurrently \"vite\" \"node server.js\"",
+    "dev:all": "concurrently \"node node_modules/.bin/vite\" \"node server.js\"",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
