--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite",
     "server": "node server.js",
+    "start": "run-p server dev",
     "dev:all": "concurrently \"node node_modules/.bin/vite\" \"node server.js\"",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
@@ -46,6 +47,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "lucide-react": "^0.563.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.8.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "react-hook-form": "^7.71.1",
